--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <div class="fs-5 mb-3">
                             
                         <p class="lead">Acero Dorado</p>
+                            <p class="lead">Regulable a presión</p>
                             <span>$8.000</span></div>
                         <div class="d-flex">
     <button class="btn btn-outline-dark flex-shrink-0" type="button"
